[package]
name = "s2-grpc-utils"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.6.0"
chrono = "0.4.9"
serde = "1.0"
serde_json = "1.0"
prost-types = "^0.8"
s2-grpc-utils-derive = { path = "./crates/s2-grpc-utils-derive" }
bigdecimal = ">=0.0.10,<0.2.0"
